force-app/main/default/objects/Appeal__c/Appeal__c.object-meta.xml
<CustomObject>
    <description>An object to keep track of Appeal records</description>
    <label>Appeal</label>
    <nameField>
        <displayFormat>Appeal-{00000000}</displayFormat>
        <label>Appeal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appeals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>