force-app/main/default/objects/Appeal__c/fields/Appeal_Decision__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Decision__c</fullName>
    <description>Decision status of the appeal</description>
    <label>Appeal Decision</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>