force-app/main/default/objects/Appeal__c/fields/Appeal_Status__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Status__c</fullName>
    <description>Current status of the appeal</description>
    <label>Appeal Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Hearing Scheduled</fullName>
            </value>
            <value>
                <fullName>Decision Made</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>