force-app/main/default/objects/Appeal__c/fields/Appeal_Submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Submitted_by__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The veteran that this appeal was submitted by</description>
    <label>Appeal Submitted by</label>
    <referenceTo>Veteran__c</referenceTo>
    <relationshipLabel>Appeals</relationshipLabel>
    <relationshipName>Appeals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>