force-app/main/default/objects/Appeal__c/fields/Appeal_Type__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Type__c</fullName>
    <description>Type of appeal being made</description>
    <label>Appeal Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submit New Evidence</fullName>
            </value>
            <value>
                <fullName>Request Higher Authority Review</fullName>
            </value>
            <value>
                <fullName>Request In-Person Hearing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>