force-app/main/default/objects/Appeal__c/fields/Case_Worker__c.field-meta.xml
<CustomField>
    <fullName>Case_Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Worker</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Appeals Officer</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Appeals Manager</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e4U000001cF9i</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Appeals</relationshipName>
    <type>Lookup</type>
</CustomField>