force-app/main/default/objects/Appeal__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <description>Date the final decision was made for the appeal</description>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>