force-app/main/default/objects/Appeal__c/fields/Reason_for_Appeal__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Appeal__c</fullName>
    <description>Text describing the reason for appeal</description>
    <label>Reason for Appeal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>