force-app/main/default/objects/Appeal__c/fields/Veteran_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Veteran_First_Name__c</fullName>
    <formula>Appeal_Submitted_by__r.Veteran_User__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Veteran First Name</label>
    <type>Text</type>
</CustomField>