force-app/main/default/objects/Appeal__c/fields/Veteran_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Veteran_Last_Name__c</fullName>
    <formula>Appeal_Submitted_by__r.Veteran_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Veteran Last Name</label>
    <type>Text</type>
</CustomField>