force-app/main/default/objects/Appeal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Claim__c</columns>
    <columns>Appeal_Status__c</columns>
    <columns>Case_Worker__c</columns>
    <columns>Appeal_Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>