force-app/main/default/objects/Appeal__c/listViews/Appeal_Status_Decision_Made.listView-meta.xml
<ListView>
    <fullName>Appeal_Status_Decision_Made</fullName>
    <columns>NAME</columns>
    <columns>Claim__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Appeal_Status__c</columns>
    <columns>Appeal_Decision__c</columns>
    <columns>Case_Worker__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Appeal_Status__c</field>
        <operation>equals</operation>
        <value>Decision Made</value>
    </filters>
    <label>Appeal Status: Decision Made</label>
</ListView>