force-app/main/default/objects/Appeal__c/listViews/My_Assigned_Appeals.listView-meta.xml
<ListView>
    <fullName>My_Assigned_Appeals</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Assigned Appeals</label>
</ListView>