force-app/main/default/objects/Appeal__c/listViews/Pending_Appeals.listView-meta.xml
<ListView>
    <fullName>Pending_Appeals</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Appeal_Decision__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Appeals</label>
</ListView>